--- a/.env
+++ b/.env
@@ -5,9 +5,9 @@ APP_KEY=eg32Sd__a#S%DfaE#-EG^)sFe(feagT#g
 DB_CONNECTION=mysql
 DB_HOST=localhost
 DB_PORT=3306
-DB_DATABASE=homestead
-DB_USERNAME=homestead
-DB_PASSWORD=secret
+DB_DATABASE=lumen-backend
+DB_USERNAME=lumen-user
+DB_PASSWORD=lumen-user
 
 CACHE_DRIVER=memcached
 QUEUE_DRIVER=sync
