--- a/.env
+++ b/.env
@@ -9,5 +9,9 @@ DB_DATABASE=lumen-backend
 DB_USERNAME=lumen-user
 DB_PASSWORD=lumen-user
 
+AUTH_DRIVER=database
+AUTH_MODEL=\App\Models\User
+AUTH_TABLE=users
+
 CACHE_DRIVER=memcached
 QUEUE_DRIVER=sync
