--- a/.env
+++ b/.env
@@ -1,6 +1,11 @@
 APP_ENV=local
 APP_DEBUG=true
 APP_KEY=eg32Sd__a#S%DfaE#-EG^)sFe(feagT#g
+APP_ENCRYPT_SALT=S*z-#)_o+0$2#_%s_^aFqA7=SD2/Sf
+
+API_SCOPE=get_user_info,upload_pic,add_news,del_news
+API_APP_ID=com.doopp.android.pic-news
+API_APP_KEY=12bcf5e7-ca32-47d3-9159-09c106ba68c9,
 
 DB_CONNECTION=mysql
 DB_HOST=localhost
