--- a/.env
+++ b/.env
@@ -7,7 +7,7 @@ API_SCOPE=get_user_info,upload_pic,add_news,del_news
 API_APP_ID=com.doopp.android.pic-news
 API_APP_KEY=12bcf5e7-ca32-47d3-9159-09c106ba68c9,
 
-DB_CONNECTION=mysql
+DB_CONNECTION=backend
 DB_HOST=localhost
 DB_PORT=3306
 DB_DATABASE=lumen-backend
