Model 的时间类型数据都由自己控制，而不是 Lumen

--- a/.env
+++ b/.env
@@ -7,10 +7,10 @@ API_SCOPE=get_user_info,upload_pic,add_news,del_news
 API_APP_ID=com.doopp.android.pic-news
 API_APP_KEY=12bcf5e7-ca32-47d3-9159-09c106ba68c9,
 
-DB_CONNECTION=backend
+DB_CONNECTION=api
 DB_HOST=localhost
 DB_PORT=3306
-DB_DATABASE=lumen-backend
+DB_DATABASE=lumen-api
 DB_USERNAME=lumen-user
 DB_PASSWORD=lumen-user
 
