--- a/.env
+++ b/.env
@@ -7,6 +7,10 @@ API_SCOPE=get_user_info,upload_pic,add_news,del_news
 API_APP_ID=com.doopp.android.pic-news
 API_APP_KEY=12bcf5e7-ca32-47d3-9159-09c106ba68c9,
 
+BKND_SCOPE=get_user_info,upload_pic,add_news,del_news
+BKND_APP_ID=com.doopp.android.pic-news
+BKND_APP_KEY=12bcf5e7-ca32-47d3-9159-09c106ba68c9,
+
 DB_CONNECTION=api
 DB_HOST=localhost
 DB_PORT=3306
