权限管理里，增加权限编辑按钮

--- a/.env
+++ b/.env
@@ -5,11 +5,11 @@ APP_ENCRYPT_SALT=S*z-#)_o+0$2#_%s_^aFqA7=SD2/Sf
 
 API_SCOPE=get_user_info,upload_pic,add_news,del_news
 API_APP_ID=com.doopp.android.pic-news
-API_APP_KEY=12bcf5e7-ca32-47d3-9159-09c106ba68c9,
+API_APP_KEY=12bcf5e7-ca32-47d3-9159-09c106ba68c9
 
-BKND_SCOPE=get_user_info,upload_pic,add_news,del_news
-BKND_APP_ID=com.doopp.android.pic-news
-BKND_APP_KEY=12bcf5e7-ca32-47d3-9159-09c106ba68c9,
+END_SCOPE=
+END_APP_ID=com.doopp.be
+END_APP_KEY=fd34dd98-45gf-jm67-1763-dc567a02dsc3
 
 DB_CONNECTION=api
 DB_HOST=localhost
