--- a/.env.devp
+++ b/.env.devp
@@ -1,5 +1,5 @@
 APP_ENV=local
-APP_DEBUG=true
+APP_DEBUG=false
 APP_KEY=wd#$DWf343GEWR%^Y#%h%EH67HtrJR^5
 APP_TIMEZONE=UTC
 
@@ -15,3 +15,5 @@ DB_PASSWORD=lumen-user
 
 CACHE_DRIVER=file
 QUEUE_DRIVER=sync
+
+APP_ENCRYPT_SALT=S*z-#)_o+0$2#_%s_^aFqA7=SD2/Sf
