完成登陆部分

--- a/.env.devp
+++ b/.env.devp
@@ -1,5 +1,5 @@
 APP_ENV=local
-APP_DEBUG=false
+APP_DEBUG=true
 APP_KEY=wd#$DWf343GEWR%^Y#%h%EH67HtrJR^5
 APP_TIMEZONE=UTC
 
@@ -16,4 +16,4 @@ DB_PASSWORD=lumen-user
 CACHE_DRIVER=file
 QUEUE_DRIVER=sync
 
-APP_ENCRYPT_SALT=S*z-#)_o+0$2#_%s_^aFqA7=SD2/Sf
+APP_ENCRYPT_SALT=S*z-#)_o+0$2#_%s_^aFqA7=_%s_SD2/Sf
