--- a/.env.test
+++ b/.env.test
@@ -16,4 +16,4 @@ DB_PASSWORD=secret
 CACHE_DRIVER=file
 QUEUE_DRIVER=sync
 
-APP_ENCRYPT_SALT=S*z-#)_o+0$2#_%s_^aFqA7=SD2/Sf
+APP_ENCRYPT_SALT=S*z-#)_o+0$2#_%s_^aFqA7=_%s_SD2/Sf
